--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h2 {
   font-weight: 700;
   text-align: center;
   padding-top: 2%;
+  color: #f5f5f5;
 }
 
 h3 {
@@ -25,9 +26,12 @@ h3 {
   line-height: 155%;
   padding: 5% 0;
   font-weight: 400;
+  color: #f5f5f5;
 }
 
 p {
+  font-family: 'Alegreya Sans', sans-serif;
+  color: #f5f5f5;
   font-size: 160%;
   line-height: 150%;
   padding: 3%;
@@ -153,4 +157,170 @@ article {
   margin: 0 auto;
   width: 50%;
   height: auto;
+}
+
+#tablet {
+  background-color: #c3d7df;
+}
+
+aside {
+  float: left;
+  margin: 0 auto;
+  width: 50%;
+  height: auto;
+}
+
+#tablet2 {
+  background-color: #a2b1c1;
+}
+
+#mobile {
+  background-color: #beb9ad;
+}
+
+#desktop {
+  background-color: #f1aa90;
+}
+
+.inner-wrapper-2 {
+  float: left;
+  width: 100%;
+  background-color: #c3d7df;
+}
+
+.inner-wrapper-3 {
+  float: left;
+  width: 100%;
+  background-color: #aadcdf;
+}
+
+.one-third {
+  width: 33.3333333%;
+  float: left;
+  text-align: center;
+}
+
+#google {
+  background-color: #a2b1c1;
+}
+
+#marketing {
+  background-color: #beb9aD;
+}
+
+#customers {
+  background-color: #aadcd2;
+}
+
+#smiley {
+  background-color: #aadcd2;
+  padding: 0 0 1%;
+  clear: both;
+}
+
+/*start footer*/
+footer {
+  background-color: #6991ac;
+  width: 100%;
+}
+
+.social {
+  list-style-type: none;
+  text-align: center;
+}
+
+.social li {
+  display: inline;
+}
+
+.social i {
+  font-size: 460%;
+  margin: 1%;
+  padding: 5% 5% 5% 4%;
+  color: #c3d7df;
+}
+
+.social i:hover {
+  color: #f5f5f5;
+}
+
+footer.second {
+  border-top: 1px solid #aadcd2;
+  background-color: #544b59;
+  max-height: 55px;
+  margin: 0;
+}
+
+footer.second p {
+  padding: 5px 0 9px 0;
+  text-align: center;
+}
+/*media query*/
+@media screen and (max-width: 760px) {
+  h2 {
+    font-size: 150%;
+  }
+  h3 {
+    font-size: 125%;
+  }
+  p {
+    font-size: 120%;
+  }
+  header {
+    position: absolute;
+  }
+  #logo {
+    margin: 15px 0 20 -25px;
+    background: url(img/RD_mobile.png) no-repeat center;
+  }
+  #menu-icon {
+    display: inline-block;
+  }
+  nav ul, nav:active ul {
+    display: none;
+    z-index: 1000;
+    position: absolute;
+    padding: 20px;
+    background: #6991ac;
+    right: 20px;
+    top: 60px;
+    border: 1px solid #fff;
+    border-radius: 2px 0 2px 2px;
+    width: 50%;
+
+  }
+  nav:hover ul {
+    display: block;
+  }
+  nav li {
+    text-align: center;
+    width: 100%;
+    padding: 10px 0;
+  }
+  .banner {
+    padding-top: 86px;
+  }
+  .one-fourth {
+    float: left;
+    width: 100%;
+  }
+  .one-fourth i {
+    font-size: 350%;
+    padding: 4% 0 1% 0;
+  }
+  article {
+    width: 100%;
+  }
+  aside {
+    width: 100%;
+  }
+  .hand-mobile {
+    display: none;
+  }
+  .one-third {
+    width: 100%;
+  }
+  .social i {
+    font-size: 180%;
+  }
 }
