--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer.second p {
     position: absolute;
   }
   #logo {
-    margin: 15px 0 20 -25px;
+    margin: 15px 0 20px -25px;
     background: url(img/RD_mobile.png) no-repeat center;
   }
   #menu-icon {
